--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.13",
+    "@reduxjs/toolkit": "^2.0.1",
     "@testing-library/react": "^14.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.0.4",
+    "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
     "@emotion/jest": "^11.11.0",
