--- a/package.json
+++ b/package.json
@@ -27,13 +27,18 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.13",
+    "@itseasy21/react-elastic-carousel": "^0.12.3",
+    "@mui/icons-material": "^5.15.0",
+    "@mui/material": "^5.15.0",
     "@reduxjs/toolkit": "^2.0.1",
     "@testing-library/react": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-images-uploading": "^3.1.7",
+    "react-material-ui-carousel": "^3.4.2",
     "react-redux": "^9.0.4",
-    "react-router-dom": "^6.20.1"
+    "react-router-dom": "^6.20.1",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@emotion/jest": "^11.11.0",
