--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "ts-node": "^10.9.1",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
+    "vite-plugin-svgr": "^4.3.0",
     "vite-tsconfig-paths": "^4.2.1"
   }
 }
