--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@mui/material": "^5.15.0",
     "@reduxjs/toolkit": "^2.0.1",
     "@testing-library/react": "^14.0.0",
+    "framer-motion": "^11.18.1",
     "moment": "^2.30.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -40,6 +41,7 @@
     "react-material-ui-carousel": "^3.4.2",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.1",
+    "react-typed": "^2.0.12",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
