--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-material-ui-carousel": "^3.4.2",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.1",
+    "react-toastify": "^11.0.3",
     "react-typed": "^2.0.12",
     "swiper": "^11.0.5"
   },
