--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
     "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "prepare": "husky install",
     "test": "jest",
     "test:coverage": "jest --coverage",
@@ -33,6 +35,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "@testing-library/react": "^14.0.0",
     "framer-motion": "^11.18.1",
+    "gh-pages": "^6.3.0",
     "moment": "^2.30.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
