--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "dog-api-init",
+  "name": "dog-star-gallery",
+  "homepage": "https://lbabyuk.github.io/dog-star-gallery/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
